--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
+    "ejs-loader": "^0.5.0",
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
